public interface IMedia {
}
