public class LoopMainMenuSolution {

    public String solution(){
        Menu menu = new Menu();
        menu.mainMenu();
        return "";
    }
}
