

public class Main {
    public static void main(String[] args) {


       //UserAccount username = new UserAccount();
       //username.welcome();
        Menu menu = new Menu();
        menu.mainMenu();
    }
}
